[FIX] web: line break into tooltip
The commit e69c72f93b0279402c1bfc581f69ad62c6aad0ca removed the line
breaks into tooltip help text.
This commit re-add them for the sake of readability.

closes odoo/odoo#55233

--- a/addons/web/static/src/scss/tooltip.scss
+++ b/addons/web/static/src/scss/tooltip.scss
@@ -25,6 +25,7 @@
             padding: 5px 8px;
         }
         .oe_tooltip_help {
+            white-space: pre-line;
             padding: 8px;
             margin-bottom: 0px;
         }
